--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.html
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.html
@@ -152,16 +152,16 @@
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">Số lượng nhân sự</div>
-        <app-grouped-bar-chart ></app-grouped-bar-chart>
+        <app-grouped-bar-chart [receivedData]="getcountedhreachmonth"></app-grouped-bar-chart>
     </div>
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">Số lượng nhân sự tăng</div>
-        <app-combo-line-bar-chart></app-combo-line-bar-chart>
+        <app-combo-line-bar-chart [receivedData]="getallnewhreachmonthpast" [receivedData2]="getallnewhreachmonthnow"></app-combo-line-bar-chart>
     </div>
     
     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 block2 ">
         <div class="title">Số lượng nhân sự giảm</div>
-        <app-combo-line-bar-chart></app-combo-line-bar-chart>
+        <app-combo-line-bar-chart [receivedData]="getallquitedhreachmonthpast" [receivedData2]="getallquitedhreachmonthnow"></app-combo-line-bar-chart>
     </div>
 </div>
